--- a/templates/service.html
+++ b/templates/service.html
@@ -2,11 +2,15 @@
 {% load staticfiles %}
 {% load i18n %}
 {% block content %}
-   <div style="background:  url({% static 'img/bgmain.png' %}) center/cover">
+    <div style="background:  url({{ gallery.img_back.url }}) center/cover fixed">
         <div class="jumbotron text-center" style="background: rgba(0, 0, 0, 0.3)">
           <div class="jumbo-content">
-            <h1 class="">Услуги</h1>
-            <p>Услуги CDC</p>
+            {% if  gallery.head %}
+                <h1 class="">{{ gallery.head }}</h1>
+            {% endif %}
+            {% if  gallery.text %}
+                <p>{{ gallery.text }}</p>
+            {% endif %}
           </div>
         </div>
     </div>
